--- a/src/main/webapp/paginas/Transaccion.xhtml
+++ b/src/main/webapp/paginas/Transaccion.xhtml
@@ -132,10 +132,10 @@
                             <h:outputText value="#{transaccionClasificacionFrm.registro.tipoTransaccion}"/>
 
                             <h:outputLabel value="Nombre de Catergoria: "/>
-                            <h:outputText value="#{transaccionClasificacionFrm.registro.categoriaId.nombre}"/>
+                            <h:outputText value="#{transaccionClasificacionFrm.registro.categoria.nombre}"/>
 
                             <h:outputLabel value="Descripsion de Catergoria: "/>
-                            <h:outputText value="#{transaccionClasificacionFrm.registro.categoriaId.descripcion}"/>
+                            <h:outputText value="#{transaccionClasificacionFrm.registro.categoria.descripcion}"/>
 
 
                             <p:column headerText="Naturaleza de la cuenta"/>
@@ -144,90 +144,39 @@
                                     <h2>Cuenta Contable Debe</h2>
                                     <p:column headerText="Nombre de Cuenta: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.nombre}"/>
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebe.nombre}"/>
 
                                     <p:column headerText="Codigo de Cuenta: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.codigo}"/>
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebe.codigo}"/>
 
                                     <p:column headerText="Codigo de Descripcion: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.codigo}"/>
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebe.codigo}"/>
                                 </h:panelGrid>
 
                                 <h:panelGrid>
                                     <h2>Cuenta Contable Haber</h2>
                                     <p:column headerText="Nombre de Cuenta: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.nombre}"/>
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableHaber.nombre}"/>
 
                                     <p:column headerText="Codigo de Cuenta: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.codigo}"/>
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableHaber.codigo}"/>
 
                                     <p:column headerText="Codigo de Descripcion: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebeId.codigo}"/>
+                                            value="#{transaccionClasificacionFrm.registro.cuentaContableHaber.codigo}"/>
                                 </h:panelGrid>
                             </h:panelGrid>
-
-                            <p:commandButton
-                            />
 
                         </h:form>
                     </h:panelGroup>
 
 
                     <h:panelGroup id="pnlDetalleClasificacion">
-                        <p:growl id="growlDetalleClasificacion" showDetail="true"/>
-                        <p:growl id="growl-stickyTabClasificacion" for="sticky-key" showDetail="true" sticky="true"/>
 
-                        <h:panelGrid rendered="#{transaccionClasificacionFrm.estado != 'NADA'}">
-                            <h:form id="frmDetalleClasificacion">
-                                <p:panel header="Transacción Seleccionada">
-                                    <h:panelGrid columns="2" cellpadding="5">
-
-                                        <p:outputLabel for="txtId" value="ID:"/>
-                                        <p:inputText id="txtId" value="#{transaccionClasificacionFrm.registro.id}"
-                                                     readonly="true"
-                                                     disabled="true"/>
-
-                                        <p:outputLabel for="txtTipoTransaccion" value="Tipo Transaccion:"/>
-                                        <p:inputText id="txtTipoTransaccion"
-                                                     value="#{transaccionClasificacionFrm.registro.tipoTransaccion}"
-                                                     size="75"
-                                                     required="true"/>
-
-                                        <p:outputLabel for="acCategoria" value="Categoria :"/>
-                                        <h:panelGrid>
-                                            <h:panelGrid columns="2">
-                                                <p:outputLabel value="Seleccione la categoria: "
-                                                               for="acCategoria"/>
-
-                                            </h:panelGrid>
-
-                                        </h:panelGrid>
-
-                                        <p:outputLabel for="acNombre" value="Nombre de Cuenta :"/>
-                                        <h:panelGrid>
-                                            <h:panelGrid columns="2">
-                                                <p:outputLabel value="Seleccione la cuenta: "
-                                                               for="acNombre"/>
-
-                                            </h:panelGrid>
-
-                                        </h:panelGrid>
-
-                                    </h:panelGrid>
-
-                                </p:panel>
-
-
-                                <ues:botones-crud formulario=""/>
-
-                            </h:form>
-
-                        </h:panelGrid>
 
                     </h:panelGroup>
 
