--- a/src/main/webapp/paginas/Transaccion.xhtml
+++ b/src/main/webapp/paginas/Transaccion.xhtml
@@ -129,13 +129,13 @@
                     <h:panelGroup id="pnlClasificacion">
                         <h:form id="frmClasificacion">
                             <h:outputLabel value="Tipo Transaccion: "/>
-                            <h:outputText value="#{transaccionClasificacionFrm.registro.tipoTransaccion}"/>
+                            <h:outputText value="#{transaccionFrm.transaccionClasificacionFrm.registro.tipoTransaccion}"/>
 
                             <h:outputLabel value="Nombre de Catergoria: "/>
-                            <h:outputText value="#{transaccionClasificacionFrm.registro.categoria.nombre}"/>
+                            <h:outputText value="#{transaccionFrm.transaccionClasificacionFrm.registro.categoria.nombre}"/>
 
                             <h:outputLabel value="Descripsion de Catergoria: "/>
-                            <h:outputText value="#{transaccionClasificacionFrm.registro.categoria.descripcion}"/>
+                            <h:outputText value="#{transaccionFrm.transaccionClasificacionFrm.registro.categoria.descripcion}"/>
 
 
                             <p:column headerText="Naturaleza de la cuenta"/>
@@ -144,30 +144,30 @@
                                     <h2>Cuenta Contable Debe</h2>
                                     <p:column headerText="Nombre de Cuenta: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebe.nombre}"/>
+                                            value="#{transaccionFrm.transaccionClasificacionFrm.registro.cuentaContableDebe.nombre}"/>
 
                                     <p:column headerText="Codigo de Cuenta: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebe.codigo}"/>
+                                            value="#{transaccionFrm.transaccionClasificacionFrm.registro.cuentaContableDebe.codigo}"/>
 
-                                    <p:column headerText="Codigo de Descripcion: "/>
+                                    <p:column headerText=" Descripcion: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableDebe.codigo}"/>
+                                            value="#{transaccionFrm.transaccionClasificacionFrm.registro.cuentaContableDebe.descripcion}"/>
                                 </h:panelGrid>
 
                                 <h:panelGrid>
                                     <h2>Cuenta Contable Haber</h2>
                                     <p:column headerText="Nombre de Cuenta: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableHaber.nombre}"/>
+                                            value="#{transaccionFrm.transaccionClasificacionFrm.registro.cuentaContableHaber.nombre}"/>
 
                                     <p:column headerText="Codigo de Cuenta: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableHaber.codigo}"/>
+                                            value="#{transaccionFrm.transaccionClasificacionFrm.registro.cuentaContableHaber.codigo}"/>
 
-                                    <p:column headerText="Codigo de Descripcion: "/>
+                                    <p:column headerText=" Descripcion: "/>
                                     <h:outputText
-                                            value="#{transaccionClasificacionFrm.registro.cuentaContableHaber.codigo}"/>
+                                            value="#{transaccionFrm.transaccionClasificacionFrm.registro.cuentaContableHaber.codigo}"/>
                                 </h:panelGrid>
                             </h:panelGrid>
 
