--- a/src/main/webapp/paginas/Transaccion.xhtml
+++ b/src/main/webapp/paginas/Transaccion.xhtml
@@ -174,59 +174,94 @@
 
                             <p:column headerText="Naturaleza de la cuenta"/>
                             <h:panelGrid columns="2">
-                                <h:panelGrid>
-                                    <h2>Cuenta Contable Debe</h2>
-                                    <p:outputLabel for="acCuentaDebe" value="Categoria :"/>
-                                    <h:panelGrid>
-                                        <h:panelGrid columns="2">
-                                            <p:outputLabel value="Seleccione la cuenta: " for="acCuentaDebe"/>
-                                            <p:autoComplete id="acCuentaDebe"
-                                                            value="#{transaccionClasificacionFrm.cuentaSeleccionada}"
-                                                            completeMethod="#{transaccionClasificacionFrm.completarCuenta}"
-                                                            var="cuentaD"
-                                                            converter="cuentaConversor"
-                                                            itemLabel="#{cuentaD.nombre}"
-                                                            itemValue="#{cuentaD}"
-                                                            forceSelection="true"
-                                                            dropdown="true"
-                                                            size="40"
-                                                            placeholder="Ingrese el nombre de la cuenta"
-                                                            emptyMessage="No se encontraron cuentas con ese nombre"
+                                <!-- Partida Contable - Dos Columnas -->
+                                <div style="display: flex; gap: 20px; margin-bottom: 20px;">
 
-                                            />
-                                        </h:panelGrid>
-                                    </h:panelGrid>
+                                <!-- COLUMNA DEBE -->
+                                <div style="flex: 1; border: 2px solid #d32f2f; border-radius: 8px; padding: 15px; background-color: #fff5f5;">
+                                    <h3 style="color: #d32f2f; text-align: center; margin-bottom: 15px;">DEBE</h3>
 
+                                    <p:outputLabel for="autoCompleteDebe" value="Buscar Cuenta Débito:"/>
+                                    <p:autoComplete id="autoCompleteDebe"
+                                                    value="#{transaccionClasificacionFrm.registro.cuentaContableDebe}"
+                                                    completeMethod="#{transaccionClasificacionFrm.completarCuenta}"
+                                                    var="cuenta"
+                                                    itemLabel="#{cuenta.codigo} - #{cuenta.nombre}"
+                                                    itemValue="#{cuenta}"
+                                                    forceSelection="true"
+                                                    dropdown="true"
+                                                    style="width: 100%;"
+                                                    required="true">
+                                        <p:ajax event="itemSelect"
+                                                listener="#{transaccionClasificacionFrm.onCuentaDebeSelect}"
+                                                update="infoCuentaDebe infoCuentaHaber validacionPartida"/>
+                                    </p:autoComplete>
 
+                                    <!-- Información de la Cuenta Débito Seleccionada -->
+                                    <h:panelGroup id="infoCuentaDebe">
+                                        <p:outputPanel rendered="#{transaccionClasificacionFrm.registro.cuentaContableDebe != null}">
+                                            <div style="margin-top: 10px; padding: 10px; background: white; border-radius: 5px; border: 1px solid #ddd;">
+                                                <p style="font-weight: bold; margin: 0 0 5px 0; color: #d32f2f;">Cuenta Débito Seleccionada:</p>
+                                                <div style="display: grid; grid-template-columns: auto 1fr; gap: 8px; align-items: center;">
+                                                    <strong>Nombre:</strong>
+                                                    <span style="color: #007ad9;">#{transaccionClasificacionFrm.registro.cuentaContableDebe.nombre}</span>
 
+                                                    <strong>Código:</strong>
+                                                    <code style="background: #f5f5f5; padding: 2px 6px; border-radius: 3px;">
+                                                        #{transaccionClasificacionFrm.registro.cuentaContableDebe.codigo}
+                                                    </code>
 
-                                </h:panelGrid>
+                                                    <strong>Descripción:</strong>
+                                                    <span>#{transaccionClasificacionFrm.registro.cuentaContableDebe.descripcion}</span>
+                                                </div>
+                                            </div>
+                                        </p:outputPanel>
+                                    </h:panelGroup>
+                                </div>
 
-                                <h:panelGrid>
-                                    <h2>Cuenta Contable Haber</h2>
-                                    <p:outputLabel for="acCuentaHaber" value="Categoria :"/>
-                                    <h:panelGrid>
-                                        <h:panelGrid columns="2">
-                                            <p:outputLabel value="Seleccione la cuenta: " for="acCuentaHaber"/>
-                                            <p:autoComplete id="acCuentaHaber"
-                                                            value="#{transaccionClasificacionFrm.cuentaSeleccionada}"
-                                                            completeMethod="#{transaccionClasificacionFrm.completarCuenta}"
-                                                            var="cuentaH"
-                                                            converter="cuentaConversor"
-                                                            itemLabel="#{cuentaH.nombre}"
-                                                            itemValue="#{cuentaH}"
-                                                            forceSelection="true"
-                                                            dropdown="true"
-                                                            size="40"
-                                                            placeholder="Ingrese el nombre de la cuenta"
-                                                            emptyMessage="No se encontraron cuentas con ese nombre"
+                                <!-- COLUMNA HABER -->
+                                <div style="flex: 1; border: 2px solid #388e3c; border-radius: 8px; padding: 15px; background-color: #f5fff5;">
+                                    <h3 style="color: #388e3c; text-align: center; margin-bottom: 15px;">HABER</h3>
 
-                                            />
-                                        </h:panelGrid>
-                                    </h:panelGrid>
+                                    <p:outputLabel for="autoCompleteHaber" value="Buscar Cuenta Haber:"/>
+                                    <p:autoComplete id="autoCompleteHaber"
+                                                    value="#{transaccionClasificacionFrm.registro.cuentaContableHaber}"
+                                                    completeMethod="#{transaccionClasificacionFrm.completarCuenta}"
+                                                    var="cuenta"
+                                                    itemLabel="#{cuenta.codigo} - #{cuenta.nombre}"
+                                                    itemValue="#{cuenta}"
+                                                    forceSelection="true"
+                                                    dropdown="true"
+                                                    style="width: 100%;"
+                                                    required="true">
+                                        <p:ajax event="itemSelect"
+                                                listener="#{transaccionClasificacionFrm.onCuentaHaberSelect}"
+                                                update="infoCuentaDebe infoCuentaHaber validacionPartida"/>
+                                    </p:autoComplete>
 
+                                    <!-- Información de la Cuenta Haber Seleccionada -->
+                                    <h:panelGroup id="infoCuentaHaber">
+                                        <p:outputPanel rendered="#{transaccionClasificacionFrm.registro.cuentaContableHaber != null}">
+                                            <div style="margin-top: 10px; padding: 10px; background: white; border-radius: 5px; border: 1px solid #ddd;">
+                                                <p style="font-weight: bold; margin: 0 0 5px 0; color: #388e3c;">Cuenta Haber Seleccionada:</p>
+                                                <div style="display: grid; grid-template-columns: auto 1fr; gap: 8px; align-items: center;">
+                                                    <strong>Nombre:</strong>
+                                                    <span style="color: #007ad9;">#{transaccionClasificacionFrm.registro.cuentaContableHaber.nombre}</span>
 
-                                </h:panelGrid>
+                                                    <strong>Código:</strong>
+                                                    <code style="background: #f5f5f5; padding: 2px 6px; border-radius: 3px;">
+                                                        #{transaccionClasificacionFrm.registro.cuentaContableHaber.codigo}
+                                                    </code>
+
+                                                    <strong>Descripción:</strong>
+                                                    <span>#{transaccionClasificacionFrm.registro.cuentaContableHaber.descripcion}</span>
+                                                </div>
+                                            </div>
+                                        </p:outputPanel>
+                                    </h:panelGroup>
+                                </div>
+                                </div>
+
                             </h:panelGrid>
 
                             <p:commandButton id="guardarTodasSelecciones"
