Boton para refrescar y regresar atras

--- a/src/main/webapp/WEB-INF/plantilla/default.xhtml
+++ b/src/main/webapp/WEB-INF/plantilla/default.xhtml
@@ -45,6 +45,12 @@
                         <a href="#{request.contextPath}/index.jsp" class="btn-icon" title="Inicio">
                             <i class="fas fa-home"></i>
                         </a>
+
+                        <a href="javascript:location.reload();"
+                           class="btn-icon"
+                           title="Actualizar página">
+                            <i class="fas fa-sync-alt"></i>
+                        </a>
                     </div>
                 </div>
             </header>
